Added ajax stuff, still need to fix timer at the very last second and maybe need to disable all controls

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <button class="challenge player2" disabled>Challenge!</button>
           </div>
         </div>
-        <button id="start-over">Start Over!</button>
+        <button id="start-over" class="hidden">Start Over!</button>
       </section>
     </main>
   </body>
