Added extra check for repeated words

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div id="challenge-img" class="flex">
               <span>Challenge!</span>
             </div>
-            <p>If you believe the word given by your opponent is not valid, you
-              can challenge them!<br />
+            <p>If you believe the word given by your opponent is not valid or is repeated,
+              you can challenge them!<br />
               You will have 3 seconds.
             </p>
           </div>
