Added fixed footer and citations

--- a/index.html
+++ b/index.html
@@ -54,13 +54,17 @@
         </section>
         <button id="start">START!</button>
         <footer>
-          Credit to blah blah blah
+          <p>
+            Word definitions drawn from Merriam-Webster's
+            Collegiate Dictionary with Audio API
+          </p>
         </footer>
       </section>
 
       <section id="game-view" class="flex hidden">
         <h2 id="countdown">Game starting in 5 sec...</h2>
         <div id="canvas" class="flex">
+          <!-- Player images and answer boxes are self-made assets -->
           <div class="player flex">
             <img src="img/player1.png" alt="player1" />
             <input class="player1" type="text" disabled />
