Reduce redundancy in js

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </main>
     <footer>
       <p>
-        Word definitions drawn from Merriam-Webster's
+        Word definitions from Merriam-Webster's
         Collegiate Dictionary with Audio API
       </p>
     </footer>
